# squab

./: .gitignore  README.md  generate_datasets.py  main_generate_dataset.py  main_generate_datasets.py  pyproject.toml  temp.py  utils.py
.devcontainer/: Dockerfile  devcontainer.json
config/: config.yaml
config/generators/: attachment.yaml  calc_unans.yaml  col_unans.yaml  out_of_scope.yaml  scope.yaml  vague.yaml
squab/: __init__.py
squab/evaluate_datasets/: __init__.py  evaluate.py
squab/generate_datasets/: __init__.py  dataset_generator.py  utils.py
squab/generate_datasets/generators/ambiguity_generators/: __init__.py  attachment_generator.py  column_ambiguity_generator.py  scope_generator.py  utils.py
squab/models/: __init__.py  gemini_wrapper.py  langchain_wrapper.py  prompts.py
src/squab/: graph_states.py  logger.py  main_graph.py  orchestator.py  orchestrator.py  pipeline.py
src/squab/data_connectors/: sqlite_connector.py
src/squab/nodes/: __init__.py  decorator_process_dataset.py  generation_steps.py  node_llm_call.py  node_process_dataset.py  node_read_sqlite_db.py  nodes_executor.py  read_sqlite_db.py  utils.py  utils_decorator_process_dataset.py  utils_node_llm_call.py
src/squab/pattern_identification/: __init__.py  abstract_pattern_identification.py  pi_category_column.py  pi_many_to_many.py  pi_overlapping_cols.py  pi_similar_columns.py  utils.py
src/squab/relational_metadata/: __init__.py  abstract_relational_metadata.py  rm_entity_component.py  rm_hypernym.py  rm_overlapping_col_values.py  rm_type_token_metadata.py
src/squab/test_generation/: __init__.py  abstract_test_generation.py  test_generation_attachment.py  test_generation_col_amb.py  test_generation_scope.py  test_generation_token_type.py
src/squab/utils/: __init__.py  utils_get_columns_no_pk_no_fk.py  utils_get_last_json_from_text.py  utils_get_name_overlapping_characters.py  utils_is_open_ai_format.py  utils_run_qatch.py
(+23 files in other folders)
