[project]
name = "squab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Simone Papicchio", email = "simone.papicchio@polito.it" }
]
dependencies = [
    "distilabel>=1.5.3",
    "pandas>=2.2.3",
    "qatch>=1.0.35",
]

[project.scripts]
squab = "squab:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/squab"]
