[project]
name = "squab"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Simone Papicchio", email = "simone.papicchio@polito.it" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-generativeai[gemini]>=0.8.4",
    "hydra-core>=1.3.2",
    "jinja2>=3.1.6",
    "langchain-community>=0.3.16",
    "langchain-openai>=0.3.2",
    "langchain-together>=0.3.0",
    "litellm>=1.72.1",
    "pytest[dev]>=8.3.4",
    "python-dotenv>=1.0.1",
    "qatch>=1.0.28",
    "scikit-learn>=1.6.1",
    "sqlalchemy>=2.0.37",
]

[project.scripts]
squab = "squab:master"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/squab"]
sources = ["src"]
